--- a/MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -223,7 +223,7 @@
         <!--Monster Browser View Controller-->
         <scene sceneID="2sw-3N-dXf">
             <objects>
-                <viewController storyboardIdentifier="MonsterBrowser" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hXf-jq-1q5" customClass="MonsterBrowserViewController" customModule="MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MonsterBrowser" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hXf-jq-1q5" customClass="MonsterBrowserViewController" customModule="MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dSE-gM-6cJ"/>
                         <viewControllerLayoutGuide type="bottom" id="K32-iu-a9X"/>
@@ -275,7 +275,7 @@
                                         </constraints>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddCell" id="ECw-9O-ETM">
-                                        <rect key="frame" x="68" y="50" width="50" height="50"/>
+                                        <rect key="frame" x="67.5" y="50" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -330,17 +330,22 @@
                             <constraint firstItem="DhE-U5-qwR" firstAttribute="width" secondItem="QYm-Bi-Fp9" secondAttribute="width" id="AMc-NV-bEC"/>
                             <constraint firstItem="K32-iu-a9X" firstAttribute="top" secondItem="DhE-U5-qwR" secondAttribute="bottom" id="Bws-6M-aMK"/>
                             <constraint firstAttribute="topMargin" secondItem="DhE-U5-qwR" secondAttribute="top" id="S2W-kc-w9Q"/>
+                            <constraint firstItem="DhE-U5-qwR" firstAttribute="top" secondItem="dSE-gM-6cJ" secondAttribute="bottom" id="gby-1l-Uw5"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="9iU-Kb-VEl"/>
+                                <exclude reference="gby-1l-Uw5"/>
                             </mask>
                         </variation>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="528"/>
                     <connections>
                         <outlet property="collectionView" destination="DhE-U5-qwR" id="orJ-hm-TRg"/>
+                        <outlet property="collectionViewTopConstraint" destination="S2W-kc-w9Q" id="t7C-4n-pWm"/>
+                        <outlet property="collectionViewTopLayoutConstraint" destination="gby-1l-Uw5" id="7s3-La-KIY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RSM-p5-SQe" userLabel="First Responder" sceneMemberID="firstResponder"/>
